Adição da paginação do GetAll
